VICTORY.txt
============================= test session starts ==============================
platform linux -- Python 3.13.7, pytest-9.0.2, pluggy-1.6.0 -- /media/michal/647A504F7A50205A/GENOME/Michal/VariDex10/VariDex/venv/bin/python3
cachedir: .pytest_cache
hypothesis profile 'default'
rootdir: /media/michal/647A504F7A50205A/GENOME/Michal/VariDex10/VariDex
configfile: pytest.ini
plugins: typeguard-4.4.4, hypothesis-6.151.3, cov-7.0.0
collecting ... collected 0 items / 1 error

==================================== ERRORS ====================================
________________ ERROR collecting tests/test_integration_e2e.py ________________
venv/lib/python3.13/site-packages/_pytest/python.py:506: in importtestmodule
    mod = import_path(
venv/lib/python3.13/site-packages/_pytest/pathlib.py:588: in import_path
    importlib.import_module(module_name)
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
venv/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:187: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
venv/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:356: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/lib/python3.13/ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "/media/michal/647A504F7A50205A/GENOME/Michal/VariDex10/VariDex/tests/test_integration_e2e.py", line 125
E       assert len(annotated) == 1
E   IndentationError: unexpected indent
=========================== short test summary info ============================
ERROR tests/test_integration_e2e.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 0.10s ===============================
